2005-01-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffeh/sigs.c (translateSig): Added missing default case.

	* kaffe/kaffeh/mem.c (GC_Ops): Added missing initializers.

2005-01-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-14  Sven de Marothy <sven@physto.se>

	* java/util/GregorianCalendar.java
	(GregorianCalendar): Update fields in the constructor
	
2005-01-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-14  Arnaud Vandyck  <avdyk@gnu.org>

	* javax/swing/text/StringContent.java: New file.

2005-01-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/SimpleDateFormat.java:
	(parse): extend try{} block so all illegal arguments
	are caught and returned as null
	
2005-01-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-13  Sven de Marothy <sven@physto.se>

	* java/text/SimpleDateFormat.java
	(parse): comparison should be case-insensitive, ignore null strings.

2005-01-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-13  Jeroen Frijters  <jeroen@frijters.net>

	* vm/reference/java/nio/channels/VMChannels.java: Class shouldn't
	be public.
	(newInputStream,newOutputStream): No need to be public.

2005-01-14  Jim Huang  <jserv@kaffe.org>

	* include/jvmpi.h:
	Add missing JVMPI version numbers.

	* kaffe/jvmpi/jvmpi_kaffe.c
	(jvmpiFillObjectAlloc):
	Use KGC_getObjectSize instead of GC_getObjectSize since the
	internal API changes.
	Retrive thread ID with vmThread with the directions from Guilhem
	Lavaux <guilhem@kaffe.org>.

	* kaffe/kaffevm/jit3/machine.c
	(translate):
	Add casting in subtraction between ncode_end and ncode_start.

	* kaffe/kaffevm/jni/jni-base.c:
	Add JVMPI specific header.

2005-01-14  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/jvmpi/jvmpi_kaffe.c
	(jvmpiFillThreadStart): Updated to follow the new threadData
	structure.